--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
+# Required:
 TOKEN=BotToken
 MONGO_URI=MongoUri
+
+# Optional:
+# FEEDBACK_WEBHOOK="For feedback command"
+# DEFAULT_PREFIX="Default prefix is defaulted to c!"
