feedback command cooldown

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@ MONGO_URI=MongoUri
 
 # Optional:
 # FEEDBACK_WEBHOOK="For feedback command"
+# FEEDBACK_COOLDOWN="Cooldown for feedback command in seconds."
 # DEFAULT_PREFIX="Default prefix is defaulted to c!"
